test/tests/PostconditionMultiple.expected
PostconditionMultiple.frost:5:23: error: found more than one postcondition
PostconditionMultiple.frost:14:26: error: found more than one postcondition
2 errors
